changed authoer, commented abstract

--- a/bericht/thesis.tex
+++ b/bericht/thesis.tex
@@ -183,7 +183,7 @@ pdfkeywords={Keywords}
 \subject{\BaType}
 \title{\BaTitle\\[15mm]}
 \subtitle{\normalsize{vorgelegt an der Hochschule f\"{u}r angewandte Wissenschaften W\"{u}rzburg-Schweinfurt in der Fakult\"{a}t Informatik und Wirtschaftsinformatik zum Abschluss eines Studiums im Studiengang \BaAuthorStudyProgram}}
-\author{\ShowBaAuthor}
+\author{Jochen Schmidt, Lennard Rose, Moritz Zeitler}
 \date{\normalsize{Eingereicht am: \BaDeadline}}
 \publishers{\
   \normalsize{Erstpr\"{u}fer: \BaSupervisorOne}\\
@@ -196,15 +196,15 @@ pdfkeywords={Keywords}
 %% abstract
 %%%%%%%%%%%%%%%%%%%
 
-\section*{Zusammenfassung}
+%\section*{Zusammenfassung}
 
-TODO
+%TODO
 
-\section*{Abstract}
+%\section*{Abstract}
 
-TODO
+%TODO
 
-\chapter*{Danksagung}
+%\chapter*{Danksagung}
 
 
 
