--- a/bericht/thesis.tex
+++ b/bericht/thesis.tex
@@ -221,8 +221,8 @@ pdfkeywords={Keywords}
 \mainmatter
 
 \chapter{Einführung und Motivation}\label{ch:intro}
-Wir in unserem Team, bestehend aus Jochen Schmidt, Lennard Rose und Moritz Zeitler hatten nach unserem Gemeinsamen Programmierprojekt beschlossen, wieder zusammen zu arbeiten und diesmal in eine ganz andere Richtung zu gehen. Hierzu muss man wissen, dass unser Programmierprojekt damals aus einem Multiplayer-Computerspiel bestand, welches wir ausschließlich mit C++ sowie SDL programmierten. Da wir nichts vorgefertigtes an Code oder Lösungen benutzten und alles 'von der Pike auf'  entwickelten, lag der Fokus vor allem auf Algorithmen, Datenstrukturen und Patterns. Auch wenn uns diese Art des Entwickelns allen sehr Spaß gemacht hat und unser Projekt sehr Erfolgreich war, wollten wir mit dieser Projektarbeit nochmal in eine ganz andere Richtung gehen um uns als Entwickler weiter zu entwickeln und unserem Repertoire ein paar neue Tools hinzuzufügen. Mit dem Thema Datamining war für uns auch sehr schnell ein Thema gefunden, welches uns sehr interessierte. Durch die Situation der Pandemie und die damit einhergehende Brisanz und Aktualität der Daten wie Inzidenz-Werte und Impfrate haben wir uns schnell auf Coronadaten festgelegt. Da Moritz noch ein paar alte Rechner im Keller stehen hatte, beschlossen wir nicht nur eine Lösung, sondern ein betriebsbereites System zu entwickeln. \newline
-Der Fokus dieser Projektarbeit soll also ganz klar auf Schnittstellen, Interaktionen und Recherche über Lösungsmöglichkeiten liegen.
+Wir in unserem Team, bestehend aus Jochen Schmidt, Lennard Rose und Moritz Zeitler sind bereits ein eingespieltes Team. Das Programmierprojekt, indem wir ein Multiplayer-Computerspiel mit C++ und der Multimedia-Bibliothek SDL2 von Grund auf erstellt haben, hatten wir bereits gemeinsam realisiert. Hierbei lag der Fokus auf der Architektur, Algorithmen und Datenstruktur des Spiels und war ein sehr lehrreiches, da wir hier keinerlei Vorerfahrung hatten, und erfolgreiches Projekt. Für diese Projektarbeit wollten wir wieder in ein Themengebiet vorstoßen auf dem wir nicht sehr vertraut waren um uns weiter zu entwickeln. Erste Vorüberlegungen waren inspiriert von der Weihnachtsvorlesung 2020 von David Kriesel über sein "BahnMining" Projekt, indem er Daten, die er über die deutsche Bahn gesammelt hatte, analysierte. Das regte unser Interesse, denn wir hatten uns gefragt wie man den technischen Aspekt dahinter clever umsetzen könne und suchten nach einer sinnvollen Datenthematik. Durch die Situation der Pandemie und die damit einhergehende Brisanz und Aktualität der Daten wie Inzidenz-Werte und Impfrate haben wir uns schnell auf Coronadaten festgelegt. Da wir noch im Besitz von ein paar älterer, ungenutzter Rechner waren, beschlossen wir nicht nur eine simple Lösung, sondern ein betriebsbereites System zu entwickeln. \newline
+Der Fokus dieser Projektarbeit soll also ganz klar auf Schnittstellen, Interaktionen und Recherche im Bereich Data Mining sowie dessen Lösungsmöglichkeiten liegen.
 
 \chapter{Entwicklungsprozess}
 Beim Entwicklungsprozess wurde sich f\"ur eine 'scrumartige' L\"osung entschieden. So werden klassische Artefakte und Tools wie etwa das Daily oder der Backlog entsprechend angepasst angewandt. Anpassung meist im Sinne der zeitlichen Komponente. Da das Projekt parallel w\"ahrend des Semesters abl\"auft wurde hier das 'Daily', von einem t\"aglichen auf einen w\"ochentlichen Rhythmus umgestellt. Das Backlog wird durch das Team selbst bef\"ullt da es keinen 'Product Owner' gibt. Genauso wurden die Sprints abgewandelt, durch die zeitliche Entzerrung wird hier direkt auf eine dynamische Sprintl\"ange gesetzt die jeweils zum Sprint-Anfang abgestimmt worden ist. \newline
@@ -266,6 +266,9 @@ Da wir bei unserer Hardware auf unsere privaten, ehemaligen genutzten, Rechner s
 Da wir wie bereits erwähnt auf unterschiedliche Hardware setzen und hierbei bereits ein Risiko besteht, es könne ein schwerwiegenden Ausfall geben, kommt aber auch noch hinzu das anderweitig z.B. durch falsche Konfiguration ein Ausfall entstehen kann.
 \item\textbf{Inkompatibilität von Python Versionen zwischen Windows und Ubuntu}
 Wir führen alle unsere Entwicklungen auf Windows durch und für die Server setzen wir auf eine etwas ältere Ubuntu Version. Dadurch sehen wir es als Risiko beim späteren aufsetzen unserer Programme auf den Servern.
+
+\pagebreak
+
 \item\textbf{Inkompatibilität von Frameworks zueinander}
 Für das Scheduling, das Dateisystem etc. setzen wir auf viele verschiedene Frameworks die alle Hand in Hand gehen müssen. Da sehen wir ein direktes Risiko von Inkompatibiltät
 \item\textbf{Schaden an der Festplatte durch Transport}
@@ -278,6 +281,9 @@ transportiert wurden war die Unversehrtheit des Systems sowie vor allem der HDDs
 \textbf{Inkompatibilität zwischen Windows/Ubuntu:} Häufigkeit: hoch; Schaden: mittel \\
 \textbf{Inkompatibilität zwischen Frameworks:} Häufigkeit: hoch; Schaden: gering \\
 \textbf{Transportschäden:} Häufigkeit: mittel; Schaden: mittel \\
+
+\pagebreak
+
 \subsection{Risikomatrix}
 
 Das ganze wurde für bessere Übersichtlichkeit grafisch als Matrix dargestellt:
@@ -288,8 +294,8 @@ Das ganze wurde für bessere Übersichtlichkeit grafisch als Matrix dargestellt:
 \centering
 \includegraphics[scale=0.8]{pictures/risikoanalyse.png}
 \end{figure}
-
-\subsection{Zeitaufwand}
+\pagebreak
+\section{Zeitaufwand}
 Wie bereits im Kapitel zu den Tickets erw\"ahnt wurde individuell jede Aufgabe bewertet und somit auch klar erkennbar welche Aufgaben hier zeitlich unter- bzw. untersch\"atzt worden sind. Am problematischstem stellten sich im Verlauf des Projekts immer wieder Plattform-Themen (z.B. Installation von Technologien) heraus:
 \begin{itemize}
 	\item Installation von Hadoop auf allen Nodes: gesch\"atzt mit 3 Stunden, tats\"achlicher 25 Stunden
@@ -314,7 +320,7 @@ Des weiteren wird bei den Inzidenzwerten auch noch zwischen Landkreis und Bundes
 	\caption{RKI Corona API Startseite}
 	\label{pic:rkiapiOverview}
 \end{figure}
-
+\pagebreak
 \section{Corona Maßnahmen}
 Für die Daten der gültigen Maßnahmen und Verordnungen wird direkt auf die offiziellen Websites der Bundesregierung bzw. der jeweiligen Landesregierung zugegriffen. Wir haben uns bewusst dagegen entschieden mögliche Dritt-Anbieter wie Nachrichtenportale zu integrieren um die Informationen ungefiltert zu erhalten, was auch Nachteile nach sich zog da die jeweiligen Regierungsportale es teilweise deutlich schwerer gemacht haben. Daraus resultieren 16 Webseiten die als Datenquellen hergenommen werden, hier eine Übersicht:
 
@@ -410,7 +416,7 @@ Die tats\"achliche grundlegende Idee hinter der Funktion von YARN ist das Aufspa
 \end{figure}
 Dies ist an dieser Stelle wahrscheinlich durchaus unverst\"andlich, was allerdings f\"ur den nachfolgenden Bericht nicht all zu relevant ist.
 \newline Es ist allerdings wichtig zu erw\"ahnen das die Auftr\"age die von YARN ausgef\"uhrt werden immer in einem Container ausgef\"uhrt werden, vergleichbar mit Docker oder Kubernetes. Dies bedeutet das alle Abh\"angigkeiten mit in den Container geliefert werden m\"ussen. Außerdem ist zu beachten das es teilweise zu Problemen mit Netzwerk bzw. Internetzugriff kommen kann.
-
+\pagebreak
 \section{HDFS}
 Das 'Hadoop Distributed File System' ist die Technologie, die im Hadoop Umfeld die verteilte Datenablage erm\"oglicht. HDFS hat viele Gemeinsamkeiten zu andern bekannten verteilten Dateisystemen wie zum Beispiel Amazon S3. Der Hauptunterschied zu den meisten Technologien ist Widerstandsf\"ahigkeit gegen\"uber Fehlern. Der Grundsatz von Hadoop war immer das ein Cluster aus Standard bzw. Kosteng\"unstiger Hardware aufgebaut werden kann, was allerdings zu einer h\"oheren Fehleranf\"alligkeit f\"uhren kann. Das HDFS wurde in diesem Zusammenhang nach dem Grundsatz entwickelt das es immer ein Teil der Hardware nicht funktioniert.\cite{hdfsFailure} \newline
 Mit unter der wichtigste Grundsatz ist aber wahrscheinlich dass, wenn m\"oglich, nicht die Daten zum Prozess bewegt werden sondern der Code bzw. der Algorithmus zu den Daten gebracht wird.\cite{movingComputation} Je gr\"oßer der Datensatz desto gr\"oßer die Kosten diese Daten zu verschieben. Und da sich im Normalfall ein 'BigData' System haupts\"achlich um große Datenmengen k\"ummert wird dieser Prozess genau umgedreht, der Algorithmus kommt zu den Daten. Die n\"otigen Voraussetzungen und Schnittstellen stellt das HDFS zur Verf\"ugung um Applikationen es zu erm\"oglichen diese Idee umzusetzen.
@@ -426,7 +432,7 @@ Als Grundprinzip sollen alle Daten kontinuierlich und automatisch im Cluster ges
 Als Alternative gibt es im Hadoop-Technologie-Zoo bereits eine L\"osung die es erm\"oglicht zeitlich, oder sogar daten-getriggert, automatisch Aufgaben zu starten - Apache Oozie. Eigentliche Hauptaufgabe von Oozie sind die sogenannten 'Workflows', was nichts anderes ist als ein vordefinierter Arbeitsablauf. Um zeitlich gesteuerte Aufgaben zu starten gibt es die sogenannten 'Coordinator Jobs', sie sind vergleichbar mit den normalen Workflows und sind einzelne, konfigurierbare Arbeitsschritte. Wichtig ist an dieser Stelle zu wissen, dass unabh\"angig von der Aufgabe, egal ob Python Script, MapReduce oder Email-Action, immer ein Art Container (vergleichbar mit Docker) erstellt wird, der dann von YARN ausgef\"uhrt wird. \newline
 Die logische Konsequenz daraus ist, dass dem auszuf\"uhrenden Paket bzw. Container alle n\"otigen Abh\"angigkeiten mitzugeben sind. Dies bedeutet zum Beispiel, dass alle Python Libraries mit in das auszuf\"uhrende Paket mit eingebunden sein m\"ussen. F\"ur fast alle Datensammler stellt dies kein Problem dar, lediglich der Scraper, der sich um die Corona-Massnahmen k\"ummert, stellt ein großes Problem dar. Mit Tesseract nutzt der Scraper ein Commandline-Tool das nicht mit ein ausf\"uhrbares Paket gepackt werden kann. \newline
 Deswegen musste als Alternative Cron verwendet werden, was ebenso zeitlich gesteuert Scripte ausf\"uhren kann. Genauer wird an dieser Stelle nicht auf Cron eingegangen, da es sich hier um eine mehr als nur bekannte Standardkomponente des Unix-Kernel handelt. Problematisch ist hier leider das die Scripte nicht \"uber YARN sondern \"uber einen Knoten selbst ausgef\"uhrt werden. Von Vorteil ist hier aber das sowohl der Installationsaufwand quasi nicht vorhanden ist und sich auch das Paketieren der Software bedeutend einfacher darstellt als bei Oozie.
-
+\pagebreak
 \section{Zeppelin}
 Um die gesammelten Daten auch effektiv verarbeiten zu k\"onnen, muss ein geeigneter Prozess aufgezeigt werden. Das Grundkonzept von Hadoop ist immer noch MapReduce. Dies funktioniert im Entwicklungsprozess immer indem ein Job programmiert wird und dann auf dem Cluster getestet wird. F\"ur Testzwecke ist das ein großer Aufwand. Heutzutage geht daher  der Trend hin zu RapidPrototyping-Umgebungen. So gibt es auch im Hadoop Umfeld eine entsprechende Option, Apache Zeppelin. Zeppelin ist stark vergleichbar mit JupyterHub und ist somit eine RapidProtoyping-Umgebung mit User Management. Innerhalb der sogenannten Notebooks kann fast jede erdenkliche Programmiersprache als Interpreter verwendet werden (z.B. Python, Java, R, Elasticsearch, hive, spark). Der grosse Vorteil von Zeppelin gegen\"uber Jupyter ist, dass der Kernel (Programmiersprachen spezifischer Prozess der Code ausf\"uhrt) auf YARN ausgef\"uhrt werden kann und somit auf alle Ressourcen des Cluster zugreifen kann.
 \begin{figure}[H]
@@ -684,23 +690,24 @@ Seit Version 4 basiert die Engine auf einem künstlichen Neuronalen Netz. Grunds
 \subsubsection{Bildumwandlung}\label{sec:sub:sub:bild}
 Während der Entwicklung und der Verwendung von Tesseract ist aufgefallen das die Engine mit einigen bunten Bildern, die die Landesregierungen veröffentlicht haben, Probleme hat. Vor allem wenn der Text farbig auf farbigen Hintergrund ist. Um dieses Problem schnell und trotzdem effizient zu lösen haben wir uns entschieden die Bilder vor der Textanalyse in schwarz und weiß umzuwandeln. Verschiedene Tests und die bisherige Erfahrung haben gezeigt dass das zwar keine perfekte aber durchaus eine solide Lösung ist.
 
+\pagebreak
 \subsection{Konfigurationen}
 
 \subsubsection{Programm Konfiguration}
 Bei der Entwicklung wurde auf hohe Konfigurierbarkeit geachtet da schon während des Prozesses festgestellt wurde das jederzeit Änderungen an den ausgewählten Websiten passieren können und deshalb das Programm sehr flexibel sein sollte. Hierfür wurde eine Config.py-Datei angelegt in denen alle wichtigen Informationen wie z.B. URLs von ElasticSearch und HDFS abgespeichert sind.
 
 \begin{lstlisting}[basicstyle=\small, caption=Config für das Programm]
-# -------------------------------hdfs--------------------------------
+# --------------------------HDFS--------------------
 HDFS_BASE_URL = '127.0.0.1'
 HDFS_PORT = '50070'
 HDFS_USER = 'hadoop'
 HDFS_MEASURES_BASE_PATH = '/datakraken/measures/'
-# -------------------------------TESSERACT---------------------------
+# --------------------------TESSERACT---------------
 TESSERACT_PATH = "E:/Programme/Tesseract/tesseract"
-# -------------------------------logging-----------------------------
+# --------------------------Logging-------------------
 loggerName = "restrictionLogger"
 logFileName = 'RestrictionScraper.log'
-# -------------------------------ElasticSearch-----------------------
+# --------------------------ElasticSearch---------------
 es_url = '127.0.0.1'
 es_port = '9200'
 indexName = "restrictions"
@@ -721,7 +728,7 @@ Da fast auschließlich nur spezielle Elemente der Websiten wie die \textless a\t
 
 Wie man in \cref{htmlHessen} sehen kann ist das \textless a\textgreater -Tag nicht über eine Id oder ähnliches eindeutig selektierbar deswegen wird ein CSS Selector gebildet, den man sich zudem auch über die Entwicklertools generieren kann. In diesem Beispiel:
 \begin{lstlisting}[caption=CSS Selector]
-#node-listenseite-100174 > div.content.clearfix > div.view.view-registerblock.view-id-registerblock.view-display-id-block.view-dom-id-eabeac53f51705a80d47815e52e2470f.hzd_registerpage-processed > div > div.views-row.views-row-1.views-row-first.views-row-odd > div.views-field.views-field-nothing-2.registerpage-content-right.he_content_body > div > a
+#node-listenseite-100174 > div.content.clearfix > div.view.view-registerblock.view-id-registerblock.view-display-id-  block.view-dom-id-eabeac53f51705a80d47815e52e2470f.hzd_registerpage- processed > div > div.views-row.views-row-1.views-row-first.views-row-odd > div.views-field.views-field-nothing-2.registerpage-content-right. he_content_body > div > a
 \end{lstlisting}
 
 Zu jedem Bundesland wurde eine Konfiguration in ElasticSearch gespeichert die am Anfang des Programms geladen wird und vorgibt woher und welche Daten das Programm laden soll.
@@ -743,7 +750,7 @@ Zu jedem Bundesland wurde eine Konfiguration in ElasticSearch gespeichert die am
 \centering
 \includegraphics[scale=0.5]{aktivitätsdiagramm_restrictionscraper.png}
 \end{figure}
-
+\pagebreak
 \subsubsection{Rohdaten Extrahierung}\label{sec:sub:sub:rohdaten}
 
 Wie im Aktivitätsdiagramm \cref{activityRestriction} zu sehen ist, werden am Anfang alle Datenquellenkonfigurationen aus ElasticSearch geladen und der Scraping Prozess für jede Quelle gestartet. Hierbei wird auf die in der Config angegebene URL zugegriffen und die jeweiligen Elemente die durch Target/Value spezifiert sind heruntergeladen. Dazu wird auf die Python-Bibliothek BeautifulSoup zurückgegriffen die zum parsen von XML- und HTML-Dokumenten dient.
@@ -781,6 +788,7 @@ self.hdfs_client.save_as_file(self.directory, fileName, fileBytes)
 data = pdfminer.high_level.extract_text(io.BytesIO(fileBytes), codec="utf-8")
 \end{lstlisting}
 
+\pagebreak
 Der letzte Fall bedeutet das die Informationen direkt im HTML-Code als Text integriert sind. Hierbei laden wir einfach die komplette Seite und extrahieren den Text hieraus.
 
 \begin{lstlisting}[basicstyle=\small, caption=Website speichern, language=Python]
@@ -799,7 +807,7 @@ INCIDENCE_REGEX =
 	r"(((?<=Inzidenzstufe)|(?<=Inzidenzwert)
 	|(?<=Inzidenz)|(?<=Schwellenwert))).{0,20}(\d{2,3})"
 \end{lstlisting}
-
+\pagebreak
 Am Ende werden die json-Objekte mit folgendem Format an ElasticSearch gesendet:
 
 \begin{lstlisting}[caption=Metadaten-Objekt, language=json]
@@ -1145,6 +1153,7 @@ def get_json_files_from_directory(self, directory):
 	return file_list
 
 \end{lstlisting}
+\pagebreak
 \subsection{Elasticsearch Helper}
 \"Ahnlich zum HDFS Helper wurde auch eine Helper Klasse f\"ur Elasticsearch implementiert. Neben Standardfunktionen wie das Indizieren einzelner Dokumente gibt es auch noch komplexere Funktionen wie zum Beispiel die automatische Suche nach dem Neuesten Dokument in einem Index. Eine außerdem wichtige Funktion ist hier die 'bulk' Indizierung einer Liste. Um viele Dokumente schnell und kosteng\"unstig zu indizieren wird bei Elasticsearch die sogenannte 'Bulk API' verwendet. Auf eine niedriges Level herunter gebrochen werden anstelle vieler einzelner Anfragen eine große bzw. einige wenige Anfragen mit vielen Dokumenten versendet. Die Anzahl der Dokumente pro Anfrage wird \"uber die 'chunk-size' geregelt. Die Wrapper-Funktion nimmt hier eine Liste von Objekten, die chunk-size, sowie den Ziel-Index und verwandelt diese dann entsprechend der vorgegebenen Elasticsearch-Funktion in eine bzw. mehrere 'bulk-request'.
 \begin{lstlisting}[basicstyle=\small, caption=Elasticsearch Helper f\"ur Bulk Indizierung ,label=esBulk,language=python]
@@ -1168,6 +1177,7 @@ def get_json_files_from_directory(self, directory):
 		helpers.bulk(self.es_client, items, chunk_size=chunk_size)
 \end{lstlisting}
 Mit Hilfe dieser Funktion kann dann, wie eben beschrieben, eine Liste von Objekte mit Hilfe des Index Namen und optional einer chunk-size, 'bulk' indiziert werden.
+\pagebreak
 \section{Wetter}
 Der Wetter-Scraper ist wohl der trivialste Scraper. Hier wird lediglich eine Konfigurationsdatei gelesen, die angibt welche St\"adte ber\"ucksichtigt werden sollen, und anhand des Ergebnis dann die Wetter-API abfragt. Technisch gesehen gibt es hier keinen große Magie. Die Abfrage funktioniert \"uber den Städtenamen der mit in Anfrage-URL eingef\"ugt wird. Zu beachten war allerdings das maximal 60 Anfragen pro Minute durchgef\"uhrt werden d\"urfen und das Umlaute gesondert behandelt werden m\"ussen da diese im HDFS Umfeld zu Problemen f\"uhren k\"onnen. Um gr\"oßern Konfigurationsaufwand im Bezug auf das Elasticsearch-Mapping zu verhindern wurde außerdem der Timestamp auf eine Standard Elasticsearch Format umgewandelt.\newline
 F\"ur eine sp\"ater Verwendung ohne Konfigurationsdatei wurden hier bereits Vorbereitungen getroffen das der Scraper auch \"uber Elasticsearch konfigurierbar ist.
